<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">My Nanodegree Apps!</string>
    <string name="action_settings">Settings</string>

    <string name="project_1_app_name">Spotify Streamer</string>
    <string name="project_2_app_name">Scores App</string>
    <string name="project_3_app_name">Library App</string>
    <string name="project_4_app_name">Build it Bigger</string>
    <string name="project_5_app_name">XYZ Reader</string>
    <string name="project_6_app_name">Capstone: My Own App</string>

    <string name="project_1_short_app_name">spotify</string>
    <string name="project_2_short_app_name">scores</string>
    <string name="project_3_short_app_name">library</string>
    <string name="project_4_short_app_name">built it bigger</string>
    <string name="project_5_short_app_name">xyz reader</string>
    <string name="project_6_short_app_name">capstone</string>

    <string name="button_toast_pre_wrapper">This button will launch my&#160;</string>
    <string name="button_toast_post_wrapper">&#160;app!</string>

</resources>
