<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    style="@style/ActivityBackground"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".AppPortfolioActivity">

    <TextView
        style="@style/TitleText"
        android:id="@+id/MainTitleText"
        android:text="@string/hello_world"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginRight="@dimen/home_button_group_horizontal_margin"
        android:layout_marginLeft="@dimen/home_button_group_horizontal_margin"
        android:layout_below="@+id/MainTitleText">

        <Button
            android:id="@+id/SpotifyStreamerButton"
            style="@style/MyNanodegreeAppsButtons"
            android:text="@string/project_1_app_name"/>

        <Button
            android:id="@+id/ScoresAppButton"
            style="@style/MyNanodegreeAppsButtons"
            android:text="@string/project_2_app_name"/>

        <Button
            android:id="@+id/LibraryAppButton"
            style="@style/MyNanodegreeAppsButtons"
            android:text="@string/project_3_app_name"/>

        <Button
            android:id="@+id/BuildItBiggerButton"
            style="@style/MyNanodegreeAppsButtons"
            android:text="@string/project_4_app_name"/>

        <Button
            android:id="@+id/XYZReaderButton"
            style="@style/MyNanodegreeAppsButtons"
            android:text="@string/project_5_app_name"/>

        <Button
            android:id="@+id/CapstoneButton"
            style="@style/MyNanodegreeAppsCapstoneButton"
            android:text="@string/project_6_app_name"/>

    </LinearLayout>

</RelativeLayout>
